🚀 Spring Boot 4 and Java 25